near-sdk-macros/src/core_impl/code_generator/snapshots/args_no_return_mut.snap
---
source: near-sdk-macros/src/core_impl/code_generator/item_impl_info.rs
assertion_line: 155
expression: pretty_print_syn_str(&actual).unwrap()
---
#[cfg(target_arch = "wasm32")]
#[no_mangle]
pub extern "C" fn method() {
    ::near_sdk::env::setup_panic_hook();
    if ::near_sdk::env::attached_deposit().as_yoctonear() != 0 {
        ::near_sdk::env::panic_err(
            ::near_sdk::errors::DepositNotAccepted::new("method").into(),
        );
    }
    #[derive(::near_sdk::serde::Deserialize)]
    #[serde(crate = "::near_sdk::serde")]
    struct Input {
        k: u64,
        m: Bar,
    }
    let Input { k, m }: Input = ::near_sdk::serde_json::from_slice(
            &::near_sdk::env::input()
                .expect("Expected input since method has arguments."),
        )
        .expect("Failed to deserialize input from JSON.");
    let mut contract: Hello = ::near_sdk::env::state_read().unwrap_or_default();
    contract.method(k, m);
    ::near_sdk::env::state_write(&contract);
}
