near-sdk-macros/src/core_impl/code_generator/snapshots/callback_args_results.snap
---
source: near-sdk-macros/src/core_impl/code_generator/item_impl_info.rs
assertion_line: 227
expression: pretty_print_syn_str(&actual).unwrap()
---
#[cfg(target_arch = "wasm32")]
#[no_mangle]
pub extern "C" fn method() {
    ::near_sdk::env::setup_panic_hook();
    if ::near_sdk::env::current_account_id() != ::near_sdk::env::predecessor_account_id()
    {
        ::near_sdk::errors::PrivateMethod::new("method");
    }
    let mut x: Result<u64, PromiseError> = match ::near_sdk::env::promise_result(0u64) {
        ::near_sdk::PromiseResult::Successful(data) => {
            ::std::result::Result::Ok(
                ::near_sdk::serde_json::from_slice(&data)
                    .expect("Failed to deserialize callback using JSON"),
            )
        }
        ::near_sdk::PromiseResult::Failed => {
            ::std::result::Result::Err(::near_sdk::PromiseError::Failed)
        }
    };
    let y: Result<::std::string::String, PromiseError> = match ::near_sdk::env::promise_result(
        1u64,
    ) {
        ::near_sdk::PromiseResult::Successful(data) => {
            ::std::result::Result::Ok(
                ::near_sdk::serde_json::from_slice(&data)
                    .expect("Failed to deserialize callback using JSON"),
            )
        }
        ::near_sdk::PromiseResult::Failed => {
            ::std::result::Result::Err(::near_sdk::PromiseError::Failed)
        }
    };
    let contract: Hello = ::near_sdk::env::state_read().unwrap_or_default();
    contract.method(&mut x, y);
}
